fixing font sizes on mobile

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -175,7 +175,6 @@
                 background-color: #5E9DE6;
                 padding: 17px 0 6px;
                 line-height: 0.7em;
-                font-size: 2.8em;
 
             }
 
@@ -183,7 +182,6 @@
                 color: white;
                 background-color: #9966DD;
                 padding: 3px 4px 0;
-                font-size: 2.8em;
             }
 
             &.ga {
